# audio-process

./: .env.example  .gitignore  README.md  RUN.md  inspect_output.py  main.py  pyproject.toml
.omx/context/: production-audio-pipeline-20260408T194259Z.md
app/: __init__.py  config.py  models.py
app/dagster/: assets.py  definitions.py
app/domain/: __init__.py  contracts.py
app/pipeline/: artifact_manager.py  factory.py  orchestrator.py  stage_graph.py
app/pipeline/stages/: __init__.py
app/pipeline/stages/asr/: __init__.py  adapters.py  nemo.py  transcribe.py
app/pipeline/stages/audio/: __init__.py  normalize.py
app/pipeline/stages/chunking/: __init__.py  segmentation.py
app/pipeline/stages/diarization/: __init__.py
app/pipeline/stages/quality/: __init__.py  chunk_quality.py
app/pipeline/stages/text/: __init__.py  vertex_text.py
app/pipeline/stages/transcript/: __init__.py  cleanup.py
app/stages/: __init__.py  asr_adapters.py  asr_nemo.py  asr_transcribe.py  chunk_quality.py  cleanup.py  diarization.py  enhance_audio.py  merge.py  normalize.py  postprocess_segments.py  segmentation.py  semantic_windows.py  text_metrics.py  vertex_text.py
audio_pipeline/: __init__.py  config.py  io_utils.py  models.py  pipeline.py
audio_pipeline/stages/: __init__.py  asr_adapters.py  asr_nemo.py  asr_transcribe.py  chunk_quality.py  cleanup.py  diarization.py  enhance_audio.py  merge.py  normalize.py  postprocess_segments.py  segmentation.py  semantic_windows.py  vertex_text.py
evaluation/: README.md  asr_eval_dataset_template.csv  build_error_taxonomy.py  domain_lexicon_template.csv  review_dataset_template.csv  run_asr_benchmark.py
tests/: test_asr_adapters.py  test_asr_transcribe.py  test_chunk_quality.py  test_dagster_assets.py  test_regression_segments.py  test_semantic_windows_and_llm_contracts.py  test_stage_graph_contracts.py  test_text_metrics.py
