[project]
name = "audio-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Baurzhan Beglerov", email = "bbeglerov@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.13.1",
    "dagster-webserver>=1.13.1",
    "dagster-dg-cli>=1.13.1",
    "google-genai>=1.71.0",
    "pyannote-audio>=4.0.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
